// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBarButtonsMenu renders CommandBarButtonsMenu 1`] = `
<DocumentFragment>
  <mock-tooltip
    content="More actions"
    relationship="label"
  >
    <mock-menu
      persistonitemclick="true"
    >
      <mock-menutrigger>
        <mock-menubutton
          appearance="transparent"
          aria-label="More actions"
          classname="commandBarButtonsMenuButton"
          icon="[object Object]"
        />
      </mock-menutrigger>
      <mock-menupopover
        style="border-radius: unset !important;"
      >
        <mock-menulist
          classname="menuList"
        >
          <mock-menuitem
            buttonref="[object Object]"
            classname="menuItem"
            hassubmenu="false"
            loadassessmentbutton="[object Object]"
            saveassessmentbutton="[object Object]"
            transfertoassessmentbutton="[object Object]"
          >
            <div
              role="menuitem"
            >
              Save assessment button
            </div>
          </mock-menuitem>
          <mock-menuitem
            buttonref="[object Object]"
            classname="menuItem"
            hassubmenu="false"
            loadassessmentbutton="[object Object]"
            saveassessmentbutton="[object Object]"
            transfertoassessmentbutton="[object Object]"
          >
            <div
              role="menuitem"
            >
              Load assessment button
            </div>
          </mock-menuitem>
          <mock-menuitem
            buttonref="[object Object]"
            classname="menuItem"
            hassubmenu="false"
            loadassessmentbutton="[object Object]"
            saveassessmentbutton="[object Object]"
            transfertoassessmentbutton="[object Object]"
          >
            <div
              role="menuitem"
            >
              Transfer to assessment button
            </div>
          </mock-menuitem>
          <mock-menuitem
            buttonref="[object Object]"
            classname="menuItem"
            hassubmenu="false"
            loadassessmentbutton="[object Object]"
            saveassessmentbutton="[object Object]"
            transfertoassessmentbutton="[object Object]"
          />
        </mock-menulist>
      </mock-menupopover>
    </mock-menu>
  </mock-tooltip>
</DocumentFragment>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render export report menuitem 1`] = `
<div
  role="menuitem"
>
  Report export button
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render load assessment menuitem 1`] = `
<div
  role="menuitem"
>
  Load assessment button
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render save assessment menuitem 1`] = `
<div
  role="menuitem"
>
  Save assessment button
</div>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render transfer to assessment menuitem 1`] = `
<div
  role="menuitem"
>
  Transfer to assessment button
</div>
`;
